--- a/app/package.json
+++ b/app/package.json
@@ -14,12 +14,11 @@
     "@types/react-dom": "^18.2.5",
     "@types/react-transition-group": "^4.4.6",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard-with-typescript": "^35.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.1.1",
+    "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^16.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "lint-staged": "^13.2.2",
@@ -28,9 +27,9 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.0.3",
-    "typescript": "^4.9.5",
+    "typescript": "^4.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -59,6 +58,13 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.8.8"
+    "@svgr/plugin-svgo": "^8.0.1",
+    "@svgr/webpack": "^8.0.1",
+    "css-select": "^4.1.3",
+    "prettier": "2.8.8",
+    "svgo": "^2.4.0"
+  },
+  "resolutions": {
+    "css-select/nth-check": "^3.1.0"
   }
 }
