feat: add products by category id pages

--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_URL=https://jsonplaceholder.typicode.com
 REACT_APP_API_URL_OLEG_KORNYAKOV=https://64b697b9df0839c97e15d4bd.mockapi.io/
+REACT_APP_API_URL_OLEG_KORNYAKOV_LOCAL_JSON=http://localhost:3000/
