--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "i18next": "^23.4.1",
     "lint-staged": "^13.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
